flex/06-flex-layout/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

body {
  height: 100vh;
  margin: 0;
  overflow: hidden;
  font-family: Roboto, sans-serif;
  display: flex;
  flex-direction: column;
}

img {
  width: 600px;
}

button {
  font-family: Roboto, sans-serif;
  border: none;
  border-radius: 8px;
  background: #eee;
}

input {
  border: 1px solid #ddd;
  border-radius: 16px;
  padding: 8px 24px;
  width: 400px;
  margin-bottom: 16px;
}

ul {
  list-style-type: none;
  padding: 0;
}

ul a {
  text-decoration: none;
  color: #424242;
}

.header, .footer, .left-links, .right-links, .buttons {
  display: flex;
}

.left-links {
  margin-right: auto;
}

.left-links, .right-links {
  gap: 10px;
}

.header, .footer {
  padding: 0 16px;
}

.footer {
  margin-top: auto;
  background-color: #eeeeee;
}

.content {
  margin-top: auto;
  margin-bottom: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.buttons button {
  padding: 10px 15px;
}

.buttons {
  gap: 5px;
}

